fix: made prerender table visible in darkmode (#16)

--- a/static/catapult-overrides/sleuth-overrides.css
+++ b/static/catapult-overrides/sleuth-overrides.css
@@ -42,9 +42,17 @@
 }
 
 .bp3-dark .modules-view-extension-list tr.enabled {
-  background-color: #294230
+  background-color: #294230;
 }
 
 .bp3-dark .modules-view-extension-list tr:not(.enabled) {
-  background-color: #422929
+  background-color: #422929;
+}
+
+.bp3-dark #prerender-view-history-table tr.used {
+  background-color: #294230;
+}
+
+.bp3-dark #prerender-view-history-table tr:not(.used) {
+  background-color: #422929;
 }
